# gEngine-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
experiments/global-constexpr/: global.h  main.cc
experiments/manager/: PlatformManager.h  builder.cc  builder.h  main.cc
src/: CMakeLists.txt  main.cc  mainC.cc  mainCPP.cc
src/config/: config.hpp
src/include/: EnvHandler.h  vertex.h
src/include/decoy/: decoy.h
src/include/gEng/: device_manager.h  environment.h  global.h  image.h  window.h
src/include/gEng/global/: global.hpp
src/include/gEng/utils/: singleton.h  singletone_base.h
src/include/image/: image.h
src/include/shader/: shader.h
src/lib/: global.cc  global.h
src/lib/EnvHandler/: EnvHandler.cc
src/lib/decoy/: decoy.cc
src/lib/environment/: Builder.cc  Builder.hpp  ChainsBuilder.cc  ChainsManager.h  PlatformBuilder.cc  PlatformBuilder.h  PlatformManager.cc  PlatformManager.h  PltBuilder.cc  Types.hpp  debug_callback.cc  debug_callback.h  environment.cc  plarform_manager.h  platform_handler.cc  platform_handler.h  platform_manager.cc  platform_manager.h
src/lib/environment/detail/: CommonForPltAndChains.hpp  Types.hpp
src/lib/global/: global.cc
src/lib/image/: BufferBuilder.cc  BufferBuilder.hpp  BufferWithMemory.h  Image.h  ImageBuilder.cc  ImageBuilder.hpp  image.cc  image_impl.cc  image_impl.h
src/lib/model/: Model.cc  Model.h
src/lib/platform/: debug_callback.cc  debug_callback.h  device_manager.cc  platform.cc  platform.h
src/lib/shader/: DrawShader.hpp  shader.cc
src/lib/uniform_buffer/: UniformBuffer.hpp
src/lib/utils/: BuilderInterface.hpp  singleton.cc  singletone_insts.cc.tmp_remove
src/lib/vertex/: vertex.cc
src/lib/window/: glfw_window.cc  glfw_window.h
src/shaders/: basic.frag  basic.vert
tests/: CMakeLists.txt
tests/dependencies/: CMakeLists.txt  readme.txt
tests/dependencies/src/: main.cc
tests/objloader/: CMakeLists.txt  readme.txt
tests/objloader/src/: main.cc
tests/opt-parser/: CMakeLists.txt
tests/opt-parser/src/: main.cc
tests/simple-launch/: CMakeLists.txt  readme.txt
tests/simple-launch/src/: main.cc
